# IPS-2025-Petrov

./: README.md
marketlab/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  (+3 more)
marketlab/backend/: Dockerfile  alembic.ini  pyproject.toml
marketlab/backend/alembic/: env.py
marketlab/backend/alembic/versions/: 001_create_initial_tables.py
marketlab/backend/src/marketlab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
marketlab/backend/src/marketlab/api/: main.py  schemas.py
marketlab/backend/src/marketlab/api/routes/: health.py  submissions.py  tasks.py
marketlab/backend/src/marketlab/domain/: __init__.py  equilibrium.py  errors.py  generator.py  models.py
marketlab/backend/src/marketlab/domain/judge/: __init__.py  models.py
marketlab/backend/src/marketlab/domain/tasks/: __init__.py  spec.py  types.py
marketlab/backend/src/marketlab/infra/: settings.py
marketlab/backend/src/marketlab/infra/db/: models.py  seed.py  session.py
marketlab/backend/src/marketlab/infra/db/repos/: __init__.py  submission_repo.py  task_repo.py
marketlab/backend/src/marketlab/infra/judge/: __init__.py  runner_inprocess.py
marketlab/backend/src/marketlab/usecases/: judge_v1.py  registry.py  submit_solution.py
marketlab/backend/src/marketlab/usecases/solvers/: __init__.py  equilibrium_solver.py
marketlab/backend/tests/: test_smoke.py
marketlab/backend/tests/api/: test_tasks_and_submissions.py
marketlab/backend/tests/domain/: test_equilibrium.py  test_generator.py  test_validation.py
marketlab/backend/tests/usecases/: test_judge_v1.py  test_registry_and_solver.py
(+10 files in other folders)
