[project]
name = "marketlab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "black>=24.0",
  "httpx>=0.27",
  "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "F",      # базовые ошибки
  "I",           # импорты
  "B",           # bugbear
  "UP",          # pyupgrade
  "ERA",         # закомментированный код
  "FIX",         # TODO / FIXME / XXX
]
ignore = [
  "E501",        # длина строки
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
